<resources>
    <string name="app_name">Flashcards</string>

    <string name="hint_deck_name">Deck Name</string>
    <string name="hint_flashcard_front">Flashcard Front</string>
    <string name="hint_flashcard_back">Flashcard Back</string>
    <string name="content_description_add_deck">Add Deck</string>
    <string name="content_description_add_flashcard">Add Flashcard</string>

    <string name="error_deck_name_cannot_be_blank">Deck name cannot be blank.</string>

    <string name="button_review">Review</string>
    <string name="button_show_back">Show Back</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>

    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>

    <plurals name="number_of_flashcards">
        <item quantity="one">1 Flashcard</item>
        <item quantity="other">%d Flashcards</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
