<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReviewActivity">

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineTopMargin"
                                          android:orientation="horizontal" app:layout_constraintGuide_percent="0.05"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineBottomMargin"
                                          android:orientation="horizontal" app:layout_constraintGuide_percent="0.95"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineLeftMargin" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="vertical" app:layout_constraintGuide_percent="0.05"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineRightMargin"
                                          android:orientation="vertical" app:layout_constraintGuide_percent="0.95"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textViewFlashcardFront" app:layout_constraintEnd_toStartOf="@+id/guidelineRightMargin"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftMargin"
            android:gravity="center"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/divider"
            app:autoSizeTextType="uniform" android:maxLines="1" tools:text="9 x 9"
            app:layout_constraintTop_toTopOf="@+id/guidelineTopMargin"/>
    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:id="@+id/divider"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightMargin"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftMargin"
            app:layout_constraintTop_toBottomOf="@+id/textViewFlashcardFront" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textViewFlashcardBack" android:visibility="gone"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textViewFlashcardBack" app:layout_constraintEnd_toStartOf="@+id/guidelineRightMargin"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftMargin"
            android:gravity="center" app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/guidelineContentSplitter"
            android:maxLines="1" app:autoSizeTextType="uniform" tools:text="42" android:visibility="gone"
            android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/button_show_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonShowBack" app:layout_constraintStart_toStartOf="@+id/guidelineLeftMargin"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightMargin"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottomMargin" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guidelineContentSplitter"/>
    <Button
            android:text="@string/button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNext" app:layout_constraintEnd_toStartOf="@+id/guidelineRightMargin"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftMargin"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottomMargin" android:visibility="gone"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guidelineContentSplitter"/>
    <Button
            android:text="@string/button_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonFinish" app:layout_constraintEnd_toStartOf="@+id/guidelineRightMargin"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftMargin"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottomMargin" android:visibility="gone"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guidelineContentSplitter"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineContentSplitter"
                                          android:orientation="horizontal" app:layout_constraintGuide_percent="0.80"/>
</android.support.constraint.ConstraintLayout>